fix tags cloud spacing

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -52,4 +52,6 @@ p
 p.tagcloud
 {
   text-align: center;
+  line-height: 1.4;
+  word-spacing: 20px;
 }
